Progress in setup

--- a/meson.build
+++ b/meson.build
@@ -58,13 +58,14 @@ common_sources = files(
   #'src/icon.c',
   'src/input.c',
   #'src/lock.c',
-  #'src/log.c',
+  'src/log.c',
   #'src/mkdirp.c',
   #'src/result.c',
-  #'src/scale.c',
-  #'src/shm.c',
+  'src/setup.c',
+  'src/scale.c',
+  'src/shm.c',
   #'src/string_vec.c',
-  #'src/surface.c',
+  'src/surface.c',
   'src/symbol.c',
   'src/sysutils.c',
   #'src/theme.c',
